--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@element-plus/icons-vue": "^2.1.0",
     "@iconify/iconify": "^3.1.1",
     "@logicflow/core": "^1.2.9",
     "@logicflow/extension": "^1.2.9",
@@ -84,6 +85,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "echarts": "^5.4.2",
+    "element-plus": "^2.3.9",
     "exceljs": "^4.3.0",
     "intro.js": "^7.0.1",
     "lodash-es": "^4.17.21",
