管理系统完成，更改公司接口

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "/#/*": ["types/*"],
       "@/*": ["src/*"],
       "#/*": ["types/*"]
-    }
+    },
+    "allowJs": true,
+    "checkJs": true
   },
   "include": [
     "tests/**/*.ts",
